Refactor: cleanup pom and readmes